verificando se o cpf é válido, se sim cadastra, ajustando o util:verifycpf, e alterando o cpfUser para numer

--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   },
   "homepage": "https://github.com/andreluismoraes/Restaurante#readme",
   "dependencies": {
+    "cpf": "^2.0.1",
     "express": "^4.17.1",
     "mongoose": "^5.8.10",
     "nodemon": "^2.0.2"
