--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "cpf": "^2.0.1",
     "express": "^4.17.1",
     "mongoose": "^5.8.10",
-    "nodemon": "^2.0.2"
+    "nodemon": "^2.0.2",
+    "validate-date": "^1.1.1"
   }
 }
