--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   "homepage": "https://github.com/andreluismoraes/Restaurante#readme",
   "dependencies": {
     "axios": "^0.19.2",
+    "bcryptjs": "^2.4.3",
     "cpf": "^2.0.1",
     "express": "^4.17.1",
     "mongoose": "^5.8.10",
