gerando um qrcode e gerando um arquivo qr.html para o qrcode

--- a/package.json
+++ b/package.json
@@ -23,8 +23,10 @@
     "bcryptjs": "^2.4.3",
     "cpf": "^2.0.1",
     "express": "^4.17.1",
+    "fs": "0.0.1-security",
     "mongoose": "^5.8.10",
     "nodemon": "^2.0.2",
+    "qrcode": "^1.4.4",
     "validate-date": "^1.1.1"
   }
 }
