--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "express": "^4.17.1",
     "fs": "0.0.1-security",
     "mongoose": "^5.8.10",
+    "multer": "^1.4.2",
     "nodemon": "^2.0.2",
     "qrcode": "^1.4.4",
     "validate-date": "^1.1.1"
