--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "fs": "0.0.1-security",
     "mongoose": "^5.8.10",
     "multer": "^1.4.2",
+    "nodemailer": "^6.4.2",
     "nodemon": "^2.0.2",
     "qrcode": "^1.4.4",
     "validate-date": "^1.1.1"
