--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "nodemailer": "^6.4.2",
     "nodemon": "^2.0.2",
     "qrcode": "^1.4.4",
+    "twilio": "^3.39.4",
     "validate-date": "^1.1.1"
   }
 }
