--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "axios": "^0.19.2",
     "bcryptjs": "^2.4.3",
     "cpf": "^2.0.1",
+    "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "fs": "0.0.1-security",
     "mongoose": "^5.8.10",
